<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>easy_plan_vhpop</name>
  <version>0.0.0</version>
  <description>POP-F integration for easy_plan</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>GPL-3.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>easy_plan</depend>
  <depend>pluginlib</depend>
  <depend>ament_index_cpp</depend>
  <build_depend>ros_environment</build_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>