<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omni_plan_vhpop</name>
  <version>1.0.0</version>
  <description>VHPOP integration for omni_plan</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>GPL-3.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>omni_plan</depend>
  <depend>pluginlib</depend>
  <depend>ament_index_cpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>